--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,8 @@
-
-
-
-
-
-
-
 body {
-    font-family: sans-serif;
-    line-height: 1.5;
-    background-color: #edf2f7;
+    background: var(--bg-color);
+    color: var(--primary-text-color);
+    font-family: 'Inter', sans-serif;
+
 }
 
 img {
@@ -17,23 +11,198 @@ img {
     height: auto;
 }
 
-.card {
-    display: flex;
-    width: 640px;
-    margin-bottom: 20px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 10px;
-    background-color: #fff;
-    box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
-        0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+a {
+    text-decoration: none;
+    padding: 0px;
+    margin: 0px;
+}
+
+
+ul {
+    list-style: none;
+    padding: 0px;
+    margin: 0px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul {
+    margin: 0;
+    padding: 0;
+}
+
+:root {
+    --bg-color: #E5E5E5;
+    --primary-text-color: #000000;
+    --secondary-text-color: #FFFFFF;
+}
+
+.container {
+    max-width: 1280px;
+    width: 100%;
+    margin: auto;
+    padding-left: 16px;
+    padding-right: 16px;
+}
+
+@media screen and (min-width: 320px) {
+    .container {
+        width: 320px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .container {
+        width: 768px;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .container {
+        width: 1280px;
+    }
+}
+
+
+.section-contact {
+    padding-top: 40px;
+    padding-bottom: 40px;
+    background-color: var(--primary-text-color);
+}
+.section__title {   
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.2;
+    text-align: center;
+
+    margin-bottom: 40px;
+    
+    color: var(--secondary-text-color);
+}
+.section__subtitle {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    text-align: center;
+    
+    color: var(--secondary-text-color);
+}
+.section__text {
+    max-width: 280px;
+    margin: auto;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.21;
+    text-align: center;
+
+    padding-top: 20px;
+    padding-bottom: 40px;
+    
+    color: var(--secondary-text-color);
+}
+.wrapper-text {
+    
+}
+
+
+ .footer {
+    padding-top: 22px;
+    padding-bottom: 22px;
+    padding-left: 24px;
+   
+    border-top: 1px solid var(--secondary-text-color);
+
+    background-color: var(--primary-text-color);
+ }
+.footer__text {
+    
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.21;
+    
+    color: var(--secondary-text-color);
+}
+
+/* .form {
+    margin-left: 93px;
+} */
+
+.input {
+    width: 358px;
+    height: 50px;
     border-radius: 4px;
+    margin-top: 20px;
+    margin-right: 12px;
+    padding-left: 16px;
+    padding-right: 16px;
+    font-size: 16px;
+    line-height: 1.25;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    color: rgba(255, 255, 255, 0.6);
+    background-color: var(--footer-background-color);
 }
 
-.card.flex-start-aligned>img {
-    align-self: flex-start;
+
+.input {
+    padding: 8px;
+    font-family: inherit;
 }
 
-.card>.content {
-    margin-left: 15px;
+/* .label {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 8px;
+} */
+
+.button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: auto;
+    margin-left: auto;
+    padding: 12px 32px;
+    margin-top: 20px;
+    margin-bottom: 40px;
+    
+    border: none;
+    border-radius: 4px;
+    background-color: #2196f3;
+    color: #fff;
+    font-size: inherit;
+    cursor: pointer;
+}
+
+.button:hover,
+.button:focus {
+    background-color: #1976d2;
 } 
+
+/* .button {
+    color: var(--white-text-color);
+    background-color: var(--accent-color);
+    text-align: center;
+    font-family: inherit;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+    cursor: pointer;
+
+    border-radius: 4px;
+    border: 1px solid transparent;
+    width: 216px;
+    height: 50px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: auto;
+    margin-left: auto;
+} */
